Overflow problem fixed

--- a/docs/css/react.scss
+++ b/docs/css/react.scss
@@ -409,6 +409,7 @@ h1, h2, h3, h4, h5, h6 {
   .playgroundPreview {
     padding: 0;
     width: 600px;
+    word-wrap: break-word;
 
     pre {
       @include code-typography;
